# relearning_opengl

./: LICENSE
opengl01/: Makefile  README.md  appwindow.cpp  appwindow.hpp  fragment.glsl  opengl01.cpp  renderer.cpp  renderer.hpp
opengl01/shaders/: vertex.glsl
opengl02/: CMakeLists.txt  README.md  appwindow.cpp  appwindow.hpp  baserenderer.cpp  baserenderer.hpp  renderer.cpp  renderer.hpp
opengl02/shaders/: vertexTriangle.glsl
opengl03/: CMakeLists.txt  README.md  baserenderer.hpp  opengl03.cpp  renderer.cpp  renderer.hpp  util.hpp
opengl03/shaders/: vertexTriangle.glsl
opengl04/: CMakeLists.txt  README.md  opengl04.cpp  renderer.cpp  renderer.hpp
opengl04/shaders/: fragment.glsl  vertexTriangle.glsl
pgfm/: CMakeLists.txt  appwindow.cpp  appwindow.hpp  util.cpp  util.hpp
